<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date"
            android:textColor="#455A64"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_check_in_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/check_in_label"
            android:textColor="#455A64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_date" />

        <TextView
            android:id="@+id/check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="#455A64"
            app:layout_constraintStart_toEndOf="@+id/txt_check_in_label"
            app:layout_constraintTop_toBottomOf="@id/txt_date"
            tools:text="05:45" />

        <TextView
            android:id="@+id/txt_check_out_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/check_out_label"
            android:textColor="#455A64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_check_in_label" />

        <TextView
            android:id="@+id/check_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#455A64"
            app:layout_constraintStart_toEndOf="@+id/txt_check_out_label"
            app:layout_constraintTop_toBottomOf="@+id/check_in"
            tools:text="15:45" />

        <TextView
            android:id="@+id/txt_location_in_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location_in_label"
            android:textColor="#455A64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_check_out_label" />

        <TextView
            android:id="@+id/txt_location_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#455A64"
            app:layout_constraintEnd_toStartOf="@+id/txt_description"
            app:layout_constraintStart_toEndOf="@+id/txt_location_in_label"
            app:layout_constraintTop_toBottomOf="@+id/check_out"
            tools:text="Mandiri Tower" />

        <TextView
            android:id="@+id/txt_location_out_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location_out_label"
            android:textColor="#455A64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_location_in" />

        <TextView
            android:id="@+id/txt_location_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#455A64"
            app:layout_constraintEnd_toStartOf="@+id/txt_description"
            app:layout_constraintStart_toEndOf="@+id/txt_location_out_label"
            app:layout_constraintTop_toBottomOf="@+id/txt_location_in"
            tools:text="Mandiri Tower" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="#455A64"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hadir" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>